miniextendr-macros/tests/ui/derive_dataframe_enum_nested_inner_variant_field.stderr
error[E0080]: evaluation panicked: DataFrameRow inner-payload field collision: an inner enum payload field has the same name as the inner enum's discriminant tag. After outer prefix expansion this produces two columns with identical names, causing silent data corruption. Rename the inner payload field or add `#[dataframe(rename = "...")]` on it to use a different column name.
  --> tests/ui/derive_dataframe_enum_nested_inner_variant_field.rs:14:10
   |
14 | #[derive(DataFrameRow)]
   |          ^^^^^^^^^^^^ evaluation of `_` failed inside this call
   |
note: inside `miniextendr_api::markers::assert_no_payload_field_collision`
  --> $RUST/core/src/panic.rs
   |
   = note: the failure occurred here
   |
  ::: $WORKSPACE/miniextendr-api/src/markers.rs
   |
   | /             panic!(
   | |                 "DataFrameRow inner-payload field collision: an inner enum payload field \
   | |                  has the same name as the inner enum's discriminant tag. After outer prefix \
   | |                  expansion this produces two columns with identical names, causing silent \
   | |                  data corruption. Rename the inner payload field or add \
   | |                  `#[dataframe(rename = \"...\")]` on it to use a different column name."
   | |             );
   | |_____________- in this macro invocation
